dh-make (0.45) UNRELEASED; urgency=low

  * NOT RELEASED YET

 -- Craig Small <csmall@debian.org>  Mon, 10 Sep 2007 14:13:40 +1000

dh-make (0.44) unstable; urgency=low

  * Locates bzip in multiple directories Closes: #40887
  * Remove unsuded CFLAGS defs Closes: #353520
  * Fixed typo in debianm/rules Closes: #439758
  * Fixed up init.d and added an lsb example from JFS Closes: #439561
  * Updated menu example Closes: #438907
  * Changed 822-date to date -R Closes: #415795
  * Remove 

 -- Craig Small <csmall@debian.org>  Wed, 01 Aug 2007 09:56:02 +1000

dh-make (0.43) unstable; urgency=low

  * Used pwd environment so symlinks should be ok Closes: 311512, 328405
  * debiank/rules target fixed Closes: 401069
  * Naive packages can specify copyright Closes: #382336
  * Removed duplicate author section from manpage.xml Closes: #376378
  * watch examples use devscripts not debscripts as the name Closes:
    #384541
  * Emacsen uses /usr/share/info directory Closes: #396509
  * Fixed exta typo in debiank control Closes: #401032
  * config.* targets moved to reduce diff size Closes: #405764
  * Removed duplicate cdbs build dep Closes: #399887
  * License templates reformatted nicely Closes: #399820

 -- Craig Small <csmall@debian.org>  Mon,  8 Jan 2007 10:22:39 +1100

dh-make (0.42) unstable; urgency=low

  * Stopped shiiping the kde examples (Closes: #372287)
  * debiank/rules is executable (Closes: #372768)
  * de-hypened man page (Closes: #372777)
  * templates changed to use compat level 5 (Closes: #370468)
  * Default priority extra in templates (Closes: #373603)
  * MAKE install var=xx => MAKE var=xx install (Closes: #374175)
  * Consitent formatting of maintainer script (Closes: #370488)
  * Kernel module name consistent (Closes: #384085)
  * bzip2 path was changed (Closes: #377523)
  * fixes for cdbs template (Closes: #382042)
  * Now supports ~ in upstream version number (Closes: #387465)
  * fixed force-reload behaviour of init.d template to follow LSB