@@ -1,8 +1,9 @@
 dh-make (0.45) UNRELEASED; urgency=low
 
   * NOT RELEASED YET
+  * Finally (I hope) fixed manpage.xml.ex Closes: #383495
 
- -- Craig Small <csmall@debian.org>  Mon, 10 Sep 2007 14:13:40 +1000
+ -- Craig Small <csmall@debian.org>  Tue, 11 Sep 2007 08:47:41 +1000
 
 dh-make (0.44) unstable; urgency=low
 
